# how-to-document-modules

./: .gitignore  CMakeLists.txt  README.md  how-to-document-modules.xml  index.html
.github/workflows/: gh-pages.yml
app/conf/: config.ini
app/scripts/: how-to-document-modules.xml.template
auto_doc/: README.md
doxygen/: doc-compile.ps1  doc-compile.sh  generate.txt
doxygen/doc/html/: annotated.html  classes.html  classhowToDocument__IDL.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_ad90daf590eb108e5d558f3d5bfe2c2d.html  dir_d6d9cae02a256ab35e2be3d8803e4934.html  files.html  functions.html  functions_func.html  group__how-to-document-modules.html  hierarchy.html  howToDocument__IDL_8h_source.html  index.html  main_8cpp_source.html  menudata.js  modules.html
doxygen/doc/html/search/: all_0.js  all_1.js  classes_0.js  functions_0.js  groups_0.js  searchdata.js
doxygen/doc/latex/: annotated.tex  classhowToDocument__IDL.tex  group__how-to-document-modules.tex  hierarchy.tex  modules.tex  refman.tex
doxygen/generated-from-xml/: how-to-document-modules.dox
idl_dox/: howToDocument_IDL.h
src/: idl.thrift  main.cpp
